BB-6787: Main menu dropdown blinking on big tablets - Fixed collapse crutch - Fixed toggle Shopping List DropDown - Refactored crutch

--- a/src/Oro/Bundle/CommerceMenuBundle/Resources/public/blank/scss/components/header-row.scss
+++ b/src/Oro/Bundle/CommerceMenuBundle/Resources/public/blank/scss/components/header-row.scss
@@ -37,6 +37,20 @@
     }
 }
 
+@include only-desktop {
+    .header-row {
+        &__trigger {
+            &.active,
+            &:hover {
+                & + .header-row__toggle,
+                .header-row__toggle {
+                    display: block;
+                }
+            }
+        }
+    }
+}
+
 @include breakpoint('desktop') {
     %hidden-on-desktop {
         &.hidden-on-desktop {
@@ -49,14 +63,6 @@
             @extend %hidden-on-desktop;
 
             padding: 0;
-
-            &.active,
-            &:hover {
-                & + .header-row__toggle,
-                .header-row__toggle {
-                    display: block;
-                }
-            }
         }
 
         &__toggle {
