--- a/src/Oro/Bundle/CommerceMenuBundle/Resources/public/default/scss/components/main-menu-column/main-menu-column.scss
+++ b/src/Oro/Bundle/CommerceMenuBundle/Resources/public/default/scss/components/main-menu-column/main-menu-column.scss
@@ -80,6 +80,9 @@
 
     &__image {
         display: block;
+
+        max-width: 100%;
+        height: auto;
     }
 
     &__link {
