--- a/src/Oro/Bundle/CommerceMenuBundle/Resources/public/default/scss/components/main-menu/main-menu.scss
+++ b/src/Oro/Bundle/CommerceMenuBundle/Resources/public/default/scss/components/main-menu/main-menu.scss
@@ -23,7 +23,7 @@
     }
 
     .main-menu {
-        display: flex !important;
+        display: flex;
 
         &__view-parent {
             display: none;
