--- a/src/Oro/Bundle/ShoppingListBundle/Resources/public/default/scss/components/shopping-list-widget.scss
+++ b/src/Oro/Bundle/ShoppingListBundle/Resources/public/default/scss/components/shopping-list-widget.scss
@@ -1,12 +1,16 @@
 // @theme: default
 
 .shopping-list-widget {
-  &:hover > .header-row__toggle {
-    display: block !important;
-  }
-
   @include breakpoint('desktop') {
     position: relative;
+
+    > .header-row__toggle {
+      display: none;
+    }
+
+    &.open > .header-row__toggle {
+      display: block;
+    }
 
     &__container {
       max-height: 450px;
@@ -68,6 +72,14 @@
         font-size: 18px;
         color: get-color('ui', 'normal');
       }
+    }
+  }
+}
+
+@include only-desktop {
+  .shopping-list-widget {
+    &:hover > .header-row__toggle {
+      display: block;
     }
   }
 }
